fixes on small devices

--- a/css/768.less
+++ b/css/768.less
@@ -1,4 +1,4 @@
-out: 768.css, sourcemap: false, compress: false
+// out: 768.css, compress: false, sourceMap: false
 
 .w(@w){
   width: @w;
@@ -107,4 +107,12 @@ out: 768.css, sourcemap: false, compress: false
 
 .dropdown-menu__social__link-fb{
   .b-position(-285px, 0);
+}
+
+.form__content{
+  padding: 0 40px!important;
+}
+
+.footer{
+  text-align: center;
 }
